[tool.poetry]
name = "tree-menu"
version = "0.1.0"
description = ""
authors = ["Kris <ssspers92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.2"
docker = "^7.1.0"
redis = "^6.1.0"
python-dotenv = "^1.1.0"
pytest-django = "^4.11.1"
flake8 = "^7.2.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
